[gd_scene load_steps=12 format=3 uid="uid://cr8uoru3v1ro7"]

[ext_resource type="Script" uid="uid://c54035p3webyd" path="res://scripts/ui_scripts/spell_button.gd" id="1_pw0qh"]
[ext_resource type="Script" uid="uid://k4tj5w7ro10l" path="res://scripts/ui_scripts/spell_hot_bar.gd" id="1_wjbi8"]
[ext_resource type="PackedScene" uid="uid://bwu1j87ffu2th" path="res://scenes/ui/experimental_ui/Button.tscn" id="2_qqlmp"]

[sub_resource type="InputEventKey" id="InputEventKey_wjbi8"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_qqlmp"]
events = [SubResource("InputEventKey_wjbi8")]

[sub_resource type="InputEventKey" id="InputEventKey_qqlmp"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_omt2m"]
events = [SubResource("InputEventKey_qqlmp")]

[sub_resource type="InputEventKey" id="InputEventKey_2bohb"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_o72c3"]
events = [SubResource("InputEventKey_2bohb")]

[sub_resource type="InputEventKey" id="InputEventKey_j260r"]
device = -1
keycode = 52
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_xvlp3"]
events = [SubResource("InputEventKey_j260r")]

[node name="spellHotBar" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wjbi8")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="space" type="ColorRect" parent="GridContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="Spell1" parent="GridContainer" instance=ExtResource("2_qqlmp")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_filter = 2
shortcut = SubResource("Shortcut_qqlmp")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true
script = ExtResource("1_pw0qh")

[node name="space2" type="ColorRect" parent="GridContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="Spell2" parent="GridContainer" instance=ExtResource("2_qqlmp")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_filter = 2
shortcut = SubResource("Shortcut_omt2m")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true
script = ExtResource("1_pw0qh")

[node name="space3" type="ColorRect" parent="GridContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="Spell3" parent="GridContainer" instance=ExtResource("2_qqlmp")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_filter = 2
shortcut = SubResource("Shortcut_o72c3")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true
script = ExtResource("1_pw0qh")

[node name="space4" type="ColorRect" parent="GridContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="Spell4" parent="GridContainer" instance=ExtResource("2_qqlmp")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_filter = 2
shortcut = SubResource("Shortcut_xvlp3")
icon_alignment = 1
vertical_icon_alignment = 2
expand_icon = true
script = ExtResource("1_pw0qh")

[node name="space5" type="ColorRect" parent="GridContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="GridContainer/Spell1" to="GridContainer/Spell1" method="_on_pressed"]
[connection signal="pressed" from="GridContainer/Spell2" to="GridContainer/Spell2" method="_on_pressed"]
[connection signal="pressed" from="GridContainer/Spell3" to="GridContainer/Spell3" method="_on_pressed"]
[connection signal="pressed" from="GridContainer/Spell4" to="GridContainer/Spell4" method="_on_pressed"]
